--- a/aboutme.html
+++ b/aboutme.html
@@ -3,15 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <nav>
+      <nav id="main-navbar">
+        <div id="navbar-container"></div>
         <ul>
           <li><a href="index.html">Resume</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
+          <li id="onpage"><a href="aboutme.html">About Me</a></li>
           <li><a href="easportsfc24.html">EA Sports FC 24</a></li>
         </ul>
+        </nav>
+        </header>
+        </div>
       </nav>
     </header>
     <h1>Jimmy Salazar</h1>
@@ -47,5 +56,9 @@
       <h2>Hobbies</h2>
       <p>In my free time I like to spend time with friends and family, watch movies, and play video games. My favorite video game right now is EA Sports FC 24</p>
     </section>
+    <footer>
+      <p>Made by Jimmy Salazar</p>
+      <p>Contact Information: jsalazar8@hawk.iit.edu</p>
+    </footer>
   </body>
 </html>
