--- a/easportsfc24.html
+++ b/easportsfc24.html
@@ -3,15 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>EA Sports FC 24</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <nav>
+      <nav id="main-navbar">
+        <div id="navbar-container"></div>
         <ul>
           <li><a href="index.html">Resume</a></li>
           <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="easportsfc24.html">EA Sports FC 24</a></li>
+          <li id="onpage"><a href="easportsfc24.html">EA Sports FC 24</a></li>
         </ul>
+        </nav>
+        </header>
+        </div>
       </nav>
     </header>
     <h1>EA Sports FC 24</h1>
@@ -35,5 +44,9 @@
       <p>The introduction of crossplay across all game modes has made the game more enjoyable for me because I get to play Clubs and Ultimate Team with friends that are on different platforms.</p> 
       <p>Overall I think this is a very solid game and hope it doesn't dissapoint. </p>
     </section>
+    <footer>
+      <p>Made by Jimmy Salazar</p>
+      <p>Contact Information: jsalazar8@hawk.iit.edu</p>
+    </footer>
   </body>
 </html>
