--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         </div>
       </nav>
     </header>
-    <h1>Jimmy Salazar</h1>
-    <section>
+    <h1 id="indexh1">Jimmy Salazar</h1>
+    <section id="indexsection">
       <h2 class="indexh">Contact Information</h2>
       <p>Cunnningham Hall, Chicago, IL</p>
       <p>(872)-225-7782</p>
       <p>jsalazar8@hawk.iit.edu</p>
     </section>
     
-    <section>
+    <section id="indexsection">
       <h2 class="indexh">Education</h2>
       <h4 class="indexh">Marie Sklodowska Curie Metropolitan High School, Chicago, IL</h4>
       <p>AVID</p>
@@ -39,7 +39,7 @@
       <p>Information Technology and Management</p>
     </section>
 
-    <section>
+    <section id="indexsection">
       <h2 class="indexh">Experience</h2>
       <h4 class="indexh">Denay's Snack Shop in Super Mall Of The Midway, Chicago, IL</h4>
       <p>2019-2020</p>
@@ -58,7 +58,7 @@
       </ul>
     </section>
 
-    <section>
+    <section id="indexsection">
       <h2 class="indexh">Volunteer Experience</h2>
       <h4 class="indexh">Junior Achievement</h4>
       <p>2022</p>
