added css to aboutme.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="aboutmebody">
     <header>
       <nav id="main-navbar">
         <div id="navbar-container"></div>
@@ -23,42 +23,40 @@
         </div>
       </nav>
     </header>
-    <h1>Jimmy Salazar</h1>
-    <section>
-      <h2>About Me</h2>
+    <div id="aboutmeheader">
+      <h1>About Me</h1>
+      </div>
+      <div id="aboutmemain">
       <p>I am a Mexican-American 18 year old born on January 19, 2005 and raised in Chicago, IL.</p>
-      <img src="images/downtownchicago.jpg" alt="Downtown Chicago">
+      <img class="aboutmeimg" src="images/downtownchicago.jpg" alt="Downtown Chicago">
       <p>I am the second oldest of five childern. I have three sisters and one brother. My parents are both from Guerreo, Mexico</p>
-      <img src="images/mexicoflag.png" alt="Mexico Flag">
-      </section>
+      <img class="aboutmeimg" src="images/mexicoflag.png" alt="Mexico Flag">
+      <h2 class="aboutmeh">Education</h2>
+      <h3 class="aboutmeh">Peck Elementary School</h3>
+      <img class="aboutmeimg" src="images/peck.jpg" alt="Peck Elementary School">
+      <h3 class="aboutmeh">Robert J. Richardson Middle School</h3>
+      <img class="aboutmeimg" src="images/richardson.jpg" alt="Robert J. Richardson Middle School">
+      <h3 class="aboutmeh">Marie Sklodowska Curie Metropolitan High School</h3>
+      <img class="aboutmeimg" src="images/curie.jpg" alt="Marie Sklodowska Curie Metropolitan High School">
+      <h3 class="aboutmeh">Illinois Institute of Technology</h3>
+      <img class="aboutmeimg" src="images/iit.jpg" alt="Illinois Institute of Technology Mies Campus">
+    </div>
 
-    <section>
-      <h2>Languages</h2>
-      <ul>
-        <li>English</li>
-        <li>Spanish</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Education</h2>
-      <p>Peck Elementary School</p>
-      <img src="images/peck.jpg" alt="Peck Elementary School">
-      <p>Robert J. Richardson Middle School</p>
-      <img src="images/richardson.jpg" alt="Robert J. Richardson Middle School">
-      <p>Marie Sklodowska Curie Metropolitan High School</p>
-      <img src="images/curie.jpg" alt="Marie Sklodowska Curie Metropolitan High School">
-      <p>Illinois Institute of Technology</p>
-      <img src="images/iit.jpg" alt="Illinois Institute of Technology Mies Campus">
-    </section>
-    
-    <section>
-      <h2>Hobbies</h2>
+    <div id="aboutmeextras">
+      <h2 class="aboutmeh">Languages</h2>
+        <ul id="aboutmeul">
+          <li>English</li>
+          <li>Spanish</li>
+        </ul>
+      <h2 class="aboutmeh">Hobbies</h2>
       <p>In my free time I like to spend time with friends and family, watch movies, and play video games. My favorite video game right now is EA Sports FC 24</p>
-    </section>
+    </div>
+
+    <div id="aboutmefooter">
     <footer>
       <p>Made by Jimmy Salazar</p>
-      <p>Contact Information: jsalazar8@hawk.iit.edu</p>
+      <p>Contact Information: jsalazar8@hawk.iit.edu</p>    
     </footer>
+    </div>
   </body>
 </html>
