--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       <h2 class="indexh">Experience</h2>
       <h4 class="indexh">Denay's Snack Shop in Super Mall Of The Midway, Chicago, IL</h4>
       <p>2019-2020</p>
-      <ul>
+      <ul id="indexul">
         <li>Cashier</li>
         <li>Prepeared snacks like Mexican street corn, nachos, sandwhiches, hotdogs, etc.</li>
         <li>Restocked merchandise</li>
       </ul>  
       <h4 class="indexh">Cremeria La Ordena, Chicago, IL</h4>
       <p>2021-Present</p>
-      <ul>
+      <ul id="indexul">
         <li>Manage the warehouse</li>
         <li>Receive merchandise</li>
         <li>Prepare orders received from different locations to get shipped on a certain date.</li>
@@ -62,7 +62,7 @@
       <h2 class="indexh">Volunteer Experience</h2>
       <h4 class="indexh">Junior Achievement</h4>
       <p>2022</p>
-      <ul>
+      <ul id="indexul">
         <li>Gave a presentation about money to students at Soccro Sandoval Elementary School.</li>
         <li>Played board games about money.</li>
       </ul>
