--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
   <body id="indexbody">
     <header>
       <nav id="main-navbar">
-        <div id="navbar-container"></div>
+        <div id="navbar-container">
         <ul>
           <li id="onpage"><a href="index.html">Resume</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="easportsfc24.html">EA Sports FC 24</a></li>
         </ul>
-        </nav>
-        </header>
         </div>
       </nav>
     </header>
