--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       </nav>
     </header>
     <h1 id="indexh1">Jimmy Salazar</h1>
-    <section id="indexsection">
+    <section class="indexsection">
       <h2 class="indexh">Contact Information</h2>
       <p>Cunnningham Hall, Chicago, IL</p>
       <p>(872)-225-7782</p>
       <p>jsalazar8@hawk.iit.edu</p>
     </section>
     
-    <section id="indexsection">
+    <section class="indexsection">
       <h2 class="indexh">Education</h2>
       <h4 class="indexh">Marie Sklodowska Curie Metropolitan High School, Chicago, IL</h4>
       <p>AVID</p>
@@ -37,18 +37,18 @@
       <p>Information Technology and Management</p>
     </section>
 
-    <section id="indexsection">
+    <section class="indexsection">
       <h2 class="indexh">Experience</h2>
       <h4 class="indexh">Denay's Snack Shop in Super Mall Of The Midway, Chicago, IL</h4>
       <p>2019-2020</p>
-      <ul id="indexul">
+      <ul class="indexul">
         <li>Cashier</li>
         <li>Prepeared snacks like Mexican street corn, nachos, sandwhiches, hotdogs, etc.</li>
         <li>Restocked merchandise</li>
       </ul>  
       <h4 class="indexh">Cremeria La Ordena, Chicago, IL</h4>
       <p>2021-Present</p>
-      <ul id="indexul">
+      <ul class="indexul">
         <li>Manage the warehouse</li>
         <li>Receive merchandise</li>
         <li>Prepare orders received from different locations to get shipped on a certain date.</li>
@@ -56,11 +56,11 @@
       </ul>
     </section>
 
-    <section id="indexsection">
+    <section class="indexsection">
       <h2 class="indexh">Volunteer Experience</h2>
       <h4 class="indexh">Junior Achievement</h4>
       <p>2022</p>
-      <ul id="indexul">
+      <ul class="indexul">
         <li>Gave a presentation about money to students at Soccro Sandoval Elementary School.</li>
         <li>Played board games about money.</li>
       </ul>
