--- a/easportsfc24.html
+++ b/easportsfc24.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="easportsfc24body">
     <header>
       <nav id="main-navbar">
         <div id="navbar-container"></div>
@@ -18,35 +18,35 @@
           <li><a href="aboutme.html">About Me</a></li>
           <li id="onpage"><a href="easportsfc24.html">EA Sports FC 24</a></li>
         </ul>
-        </nav>
-        </header>
         </div>
       </nav>
     </header>
+    <div id="easportsfc24wrapper">
+    <div id="easportsfc24header">
     <h1>EA Sports FC 24</h1>
-    <section>
+    </div>
+    <div id="easportsfc24main">
       <h2>The World's Game</h2>
       <img src="images/eafclogo.jpg" alt="EA Sports FC 24 Logo in Black">
       <p>EA Sports FC 24 is the first of its kind. Not only is the first football game made by EA that is not partenerd with FIFA, but it introduced crossplay for all game modes. Which was highly requested in past FIFAs.</p>
-    </section>
-
-    <section>   
       <h2>EA Sports FC 24 Gameplay Trailer</h2>
       <iframe src="https://www.youtube.com/embed/XhP3Xh4LMA8" title="EA SPORTS FC 24 | Official Gameplay Trailer" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       <p>EA Sports FC 24 early access was released on September 22, 2023, and will be offically released September 22, 2023. </p>
+    </div>
+    <div id="easportsfc24extras">
       <p>EA SPORTS FC and Marvel have teamed up with UEFA to introduce a new squad of Ultimate Team Heroes. Which were available for free with the purchase of EA Sports FC 24 Ultimate Edition before August 21.</p>
       <img src="images/eafc24heroes.jpg" alt="EA Sports FC 24 UCL Heroe Cards">
-    </section>
-    
-    <section> 
       <h2>My Thoughts</h2>
       <p>I personally purchased EA Sports FC 24 Ultimate Edition, and got early access.</p> 
       <p>The introduction of crossplay across all game modes has made the game more enjoyable for me because I get to play Clubs and Ultimate Team with friends that are on different platforms.</p> 
       <p>Overall I think this is a very solid game and hope it doesn't dissapoint. </p>
-    </section>
+    </div>
+    <div id="easportsfc24footer">
     <footer>
       <p>Made by Jimmy Salazar</p>
       <p>Contact Information: jsalazar8@hawk.iit.edu</p>
     </footer>
+    </div>
+  </div>
   </body>
 </html>
