--- a/easportsfc24.html
+++ b/easportsfc24.html
@@ -12,7 +12,7 @@
   <body id="easportsfc24body">
     <header>
       <nav id="main-navbar">
-        <div id="navbar-container"></div>
+        <div id="navbar-container">
         <ul>
           <li><a href="index.html">Resume</a></li>
           <li><a href="aboutme.html">About Me</a></li>
