--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
   <body id="aboutmebody">
     <header>
       <nav id="main-navbar">
-        <div id="navbar-container"></div>
+        <div id="navbar-container">
         <ul>
           <li><a href="index.html">Resume</a></li>
           <li id="onpage"><a href="aboutme.html">About Me</a></li>
